Add into deploy-all scripts mock price oracle deploy and set price of tMetis token

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "hardhat clean",
     "lint:sol": "solium -d contracts/ --fix",
     "postinstall": "npx patch-package",
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "deploy-stardust": "npx hardhat run scripts/deploy-all.ts --network stardust"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
